--- a/src/jade/partials/_footer.jade
+++ b/src/jade/partials/_footer.jade
@@ -1,7 +1,14 @@
 include ./_svg
 
 mixin footer()
-	footer.footer-wrapper
+	footer
 		.container
-			small &copy; 2019 Brad Mahon of BrainSurvey, LLC &bull; <a href="https://github.com/bennettfeely/openbrainproject">GitHub</a>
+			.copyright 
+				| &copy; 2019 Brad Mahon of BrainSurvey, LLC
+			.social
+				| Follow us
+				a.social-link.facebook-icon(href="")
+					+icon("facebook")
+				a.social-link.twitter-icon(href="")
+					+icon("twitter")
 	+svg()
