--- a/src/jade/partials/_header.jade
+++ b/src/jade/partials/_header.jade
@@ -1,12 +1,11 @@
 include ./_icon
 
-mixin header()
-	header.header-wrapper.container
-		.site-logo
-			+icon("brain")
-			h1.site-logo-text 
-				a(href="/") Brain Survey
-				a.site-logo-tagline A part of The Open Brain Project
-		nav.site-links
-			a.site-link.home-link(href="/") Explorer
-			a.site-link.team-link(href="/team") Our Team
+mixin header(pageHeaderTitle)
+	header
+		.container
+			.logo
+				h1.site-logo
+					a(href="/")
+						+icon("brain")
+						| The Open Brain Project
+					span.slug= pageHeaderTitle
