--- a/src/jade/tbi/index.jade
+++ b/src/jade/tbi/index.jade
@@ -4,15 +4,18 @@ include ../partials/_svg
 include ../partials/_icon
 include ../partials/_footer
 
-+head()
++head("Traumatic Brain Injury Explorer | The Open Brain Project", "Hirad and colleagues (2019) used MRI to measure the structural changes that occur in an athlete’s brain from a single season of football.")
 body.tbi
 	+header("tbi")
+	+nav()
 	main
-		.container
-			h1 Traumatic Brain Injury Explorer
-		.container
-			p.citation Hirad and colleagues (2019) used MRI to measure the structural changes that occur in an athlete’s brain from a single season of football. The critical finding is that there are stereotyped patterns of brain injury that are asymptomiatic—meaning no signs or symptoms of concussion. The tools below provide a visalization of how force loading during football affects brain structure.
-			p.citation Hirad, Bazarian, Merchant-Borna, Garcea, Heilbronner, Paul, Hintz, van Wijngaarden, Schifitto, Wright, Espinoza, and Mahon. (2019). A common neural signature of brain injury in concussion and sub-concussion. Science Advances.
+		section
+			.container
+				h1 Traumatic Brain Injury Explorer
+		section
+			.container
+				p.citation Hirad and colleagues (2019) used MRI to measure the structural changes that occur in an athlete’s brain from a single season of football. The critical finding is that there are stereotyped patterns of brain injury that are asymptomiatic—meaning no signs or symptoms of concussion. The tools below provide a visalization of how force loading during football affects brain structure.
+				p.citation Hirad, Bazarian, Merchant-Borna, Garcea, Heilbronner, Paul, Hintz, van Wijngaarden, Schifitto, Wright, Espinoza, and Mahon. (2019). A common neural signature of brain injury in concussion and sub-concussion. Science Advances.
 		.wrapper
 			.canvas-wrapper
 				canvas#impact
@@ -36,8 +39,8 @@ body.tbi
 			p If you have data from a helmet worn accelerometer that you would like to contribute to the Open Brain Project, please sign up below for instructions on how to upload your data.
 	+footer()
 
-script(src="js/three.min.js")
-script(src="js/OrbitControls.min.js")
-script(src="js/GLTFLoader.min.js")
-script(src="js/WebGL.min.js")
-script(src="js/tbi.js")
+script(src="../js/three.min.js")
+script(src="../js/OrbitControls.min.js")
+script(src="../js/GLTFLoader.min.js")
+script(src="../js/WebGL.min.js")
+script(src="../js/tbi.js")
