--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -6,30 +6,32 @@ include ./partials/_footer
 +head("The Open Brain Project | Discover, Educate, Translate", "The Open Brain Project is a collaborative effort among scientists and clinicians to advance understanding of normal and pathological brain function.")
 body.home
 	+header("")
+	+nav()
 	main
-		.container
-			.link-blocks.main-area-blocks
-				a.link-block.discover-block(href="/discover")
-					.container
-						h1 Discover
-						p Integrating knowledge from the cognitive and brain sciences to open new frontiers in understanding human brain structure and function.
-						.button
-							| Learn More
-							+icon("rarr-icon")
-				a.link-block.educate-block(href="/educate")
-					.container
-						h1 Educate
-						p Connecting patients who have questions about a recent diagnosis to answers, students to educational resources, and scientists and clinicians to the latest tools for advancing knowledge and patient care.
-						.button
-							| Learn More
-							+icon("rarr-icon")
-				a.link-block.translate-block(href="/translate")
-					.container
-						h1 Translate
-						p The Program for Translational Brain Mapping is focused on translating the latest discoveries about human brain function into opportunities to improve patient care.
-						.button
-							| Learn More
-							+icon("rarr-icon")
+		section.main-area-blocks-section
+			.container
+				.link-blocks.main-area-blocks
+					a.link-block.discover-block.orange-gradient(href="/discover")
+						.container
+							h1 Discover
+							p Integrating knowledge from the cognitive and brain sciences to open new frontiers in understanding human brain structure and function.
+							.button
+								| Learn More
+								+icon("rarr-icon")
+					a.link-block.educate-block.green-gradient(href="/educate")
+						.container
+							h1 Educate
+							p Connecting patients who have questions about a recent diagnosis to answers, students to educational resources, and scientists and clinicians to the latest tools for advancing knowledge and patient care.
+							.button
+								| Learn More
+								+icon("rarr-icon")
+					a.link-block.translate-block.blue-gradient(href="/translate")
+						.container
+							h1 Translate
+							p The Program for Translational Brain Mapping is focused on translating the latest discoveries about human brain function into opportunities to improve patient care.
+							.button
+								| Learn More
+								+icon("rarr-icon")
 		section.mission-section
 			.container
 				h1 The Open Brain Project is a collaborative effort among scientists and clinicians to support basic discoveries of brain function that advance patient care and provide a platform for community education and outreach.
@@ -39,17 +41,17 @@ body.home
 				h1 Our Focus Areas
 			.container
 				.link-blocks.focus-area-blocks
-					a.link-block.stroke-block(href="/stroke")
+					a.link-block.stroke-block.pink-gradient(href="/stroke")
 						.container
 							h1 
 								| Stroke
 								+icon("rarr-icon")
-					a.link-block.stroke-block(href="/brain-tumors")
+					a.link-block.stroke-block.yellow-gradient(href="/brain-tumors")
 						.container
 							h1 
 								| Brain Tumors
 								+icon("rarr-icon")
-					a.link-block.stroke-block(href="/tbi")
+					a.link-block.stroke-block.purple-gradient(href="/tbi")
 						.container
 							h1 
 								| Traumatic Brain Injury
