--- a/src/jade/partials/_header.jade
+++ b/src/jade/partials/_header.jade
@@ -1,11 +1,14 @@
 include ./_icon
+include ./_nav
 
 mixin header(pageHeaderTitle)
 	header
 		.container
-			.logo
-				h1.site-logo
-					a(href="/")
-						+icon("brain")
-						| The Open Brain Project
-					span.slug= pageHeaderTitle
+			.site-logo
+				a(href="/")
+					+icon("brain")
+					| The Open Brain Project
+				span.slug= pageHeaderTitle
+			.nav-toggle
+				span Menu
+				+icon("menu-icon")
