--- a/src/jade/partials/_svg.jade
+++ b/src/jade/partials/_svg.jade
@@ -1,5 +1,7 @@
 mixin svg()
 	svg(style="display: none", xmlns="http://www.w3.org/2000/svg")
+		symbol#menu-icon(viewbox="0 0 6 6")
+			path(d="M1 1.5 L5 1.5 M1 3 L5 3 M1 4.5 L5 4.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
 		symbol#larr-icon(viewbox="0 0 6 6")
 			path(d="M1 3 L5 3 M1 3 L2.5 1.5 M1 3 L2.5 4.5", stroke="#fff", stroke-width="1", fill="none", stroke-linecap="round")
 		symbol#close-icon(viewbox="0 0 6 6")
